objects/Billing_Item__c.object
<CustomObject>
    <fields>
        <fullName>Use_Alternate_Description__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Alternate Description</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ValidationRules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ValidationRules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verify_One_Time_Dates__c</fullName>
        <description>admin field to vet out end dates different from start dates</description>
        <formula>IF( Product_Family__c =&quot;One Time&quot;,  End_Date__c -  Start_Date__c, NULL)</formula>
        <label>Verify One Time Dates</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vin_Dealer_Id2__c</fullName>
        <label>Vin Dealer Id2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vin_Dealer_Id__c</fullName>
        <formula>Contract__r.Vin_Dealer_Id1__c</formula>
        <label>Vin Dealer Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_Design__c</fullName>
        <label>Website Design</label>
        <picklist>
            <picklistValues>
                <fullName>Alpha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barracuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bravo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Challenger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevelle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delray</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Echo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edsel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evolution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiero</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Firedome</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fleetwood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kilo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lancer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mike</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minimalist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mirage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nova</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outlander</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Progressive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prowler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rambler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Studebaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thunderbird</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>isBaseAsset__c</fullName>
        <description>This lookup identifies if the Asset is a Base or not</description>
        <formula>Product_Sold__r.Base_Product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isBaseAsset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legacy_Line__c</fullName>
        <inlineHelpText>for vAuto data migration</inlineHelpText>
        <label>Legacy Line #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vAuto_Activation_Date__c</fullName>
        <description>change requested per Michelle D 1/28/2105 per CR-00011658</description>
        <formula>Active_Date__c</formula>
        <inlineHelpText>formula field that reads the asset active date and sets it as the activation date</inlineHelpText>
        <label>vAuto Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vAuto_App_Key__c</fullName>
        <formula>Contract__r.Account.LogicalId__c &amp;&quot;-&quot;&amp;  Product_External_Name__c &amp;&quot;-&quot;&amp;  Start_Month_Year__c</formula>
        <inlineHelpText>formula field to make the matching key for the vAuto app project</inlineHelpText>
        <label>vAuto App Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vAuto_Date_Integration_Complete__c</fullName>
        <formula>IF( Business_Unit__c = &quot;vAuto&quot;,Related_Project_Piece__r.Project__r.Date_Integration_Complete__c, NULL)</formula>
        <inlineHelpText>vAuto - formula field that reads the date integration complete from the project</inlineHelpText>
        <label>vAuto Date Integration Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vAuto_Termination_Date__c</fullName>
        <formula>End_Date__c</formula>
        <inlineHelpText>formula field that reads the fields from the account, edits to the fields need to be completed on the account</inlineHelpText>
        <label>vAuto Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vAuto_Training_Status__c</fullName>
        <description>vAuto reporting needs for cancelled sales, need to know what was trained, not trained</description>
        <formula>IF(
AND(  
ISPICKVAL(LOB_Status__c, &quot;Cancelled Sale&quot;),  !ISBLANK(No_Launch_Date__c)), &quot;Not Trained&quot;,&quot;Trained&quot;)</formula>
        <inlineHelpText>vAuto reporting needs for cancelled sales, need to know what was trained, not trained</inlineHelpText>
        <label>vAuto Training Status</label>
        <type>Text</type>
    </fields>
    <label>Billed Asset</label>
    <listViews>
        <fullName>AG_Assets_Pending</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Dealer__c</columns>
        <columns>Product_Sold__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Active_Date__c</columns>
        <columns>Legacy_Active_Date__c</columns>
        <columns>Legacy_Install_Date__c</columns>
        <columns>Legacy_ID__c</columns>
        <columns>legacy_Line__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Sold__c</field>
            <operation>contains</operation>
            <value>auction genius,kbb,kelley</value>
        </filters>
        <filters>
            <field>Action__c</field>
            <operation>equals</operation>
            <value>Add</value>
        </filters>
        <filters>
            <field>Product_Sold__c</field>
            <operation>notContain</operation>
            <value>TIM</value>
        </filters>
        <label>AG Assets Pending</label>
        <sharedTo>
            <roleAndSubordinatesInternal>vAuto_VP_GM</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Fees_Ready_to_Bill</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Ready_to_Bill__c</columns>
        <columns>Revenue_Type__c</columns>
        <columns>Change_Type__c</columns>
        <columns>Product_Sold__c</columns>
        <columns>Total_Price__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Bill_to_SVOC_Id__c</columns>
        <columns>Bill_To_Dealer_Name__c</columns>
        <columns>Product_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Code__c</field>
            <operation>equals</operation>
            <value>,PV RCI SU,PV SetUp,GL Set Up,PV ADP SU,CQ Set Up,PV Ent</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Billing_Item__c.ADD</value>
        </filters>
        <filters>
            <field>Bill_to_SVOC_Id__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Fees Ready to Bill (have svoc id)</label>
        <sharedTo>
            <group>vAuto_All_vAuto</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Flip_back_to_modify</fullName>
        <columns>NAME</columns>
        <columns>Change_Type__c</columns>
        <columns>Action__c</columns>
        <columns>End_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Recurring_Flag__c</columns>
        <columns>Ready_to_Bill__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Billing_Item__c.CANCEL</value>
        </filters>
        <filters>
            <field>Contract__c</field>
            <operation>contains</operation>
            <value>00014022</value>
        </filters>
        <label>Flip back to modify</label>
    </listViews>
    <listViews>
        <fullName>Implementation_Complete_no_Training</fullName>
        <columns>NAME</columns>
        <columns>Bill_To_Dealer_Name__c</columns>
        <columns>Ready_to_Bill__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Contract__c</columns>
        <columns>Completed_Date__c</columns>
        <columns>Project_nbr__c</columns>
        <columns>Product_Sold__c</columns>
        <columns>Accounting_Notes__c</columns>
        <columns>Change_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Billing_Item__c.MODIFY</value>
        </filters>
        <filters>
            <field>Contract__c</field>
            <operation>contains</operation>
            <value>00073868</value>
        </filters>
        <label>Dillon&apos;s</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Implemetation_complete</fullName>
        <columns>NAME</columns>
        <columns>Contract__c</columns>
        <columns>Bill_To_Dealer_Name__c</columns>
        <columns>Product_Sold__c</columns>
        <columns>Ready_to_Bill__c</columns>
        <columns>Change_Type__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Completed_Date__c</columns>
        <columns>Related_Project_Piece__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Implementation_Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Primary_Line_Item__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>!Implementation complete</label>
    </listViews>
    <listViews>
        <fullName>Items_in_Process_Stop_mode</fullName>
        <columns>NAME</columns>
        <columns>Contract__c</columns>
        <columns>Contract_Status__c</columns>
        <columns>Action__c</columns>
        <columns>Alternate_Product_Description__c</columns>
        <columns>Appeal_Category__c</columns>
        <columns>Appeal_Type__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Recurring_Flag__c</columns>
        <columns>Bill_Period_Code__c</columns>
        <columns>Bill_Now__c</columns>
        <columns>Accounting_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Billing_Item__c.Process_Stop</value>
        </filters>
        <filters>
            <field>Contract__c</field>
            <operation>equals</operation>
            <value>12030</value>
        </filters>
        <label>Items in Process Stop mode</label>
    </listViews>
    <listViews>
        <fullName>Legacy_Active_Dates</fullName>
        <columns>NAME</columns>
        <columns>Active_Date__c</columns>
        <columns>Legacy_Active_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Legacy_ID__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Legacy Active Dates</label>
    </listViews>
    <listViews>
        <fullName>Travel_Expenses_Ready_to_Bill</fullName>
        <columns>NAME</columns>
        <columns>Dealer__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Ready_to_Bill__c</columns>
        <columns>Product_Sold__c</columns>
        <columns>Total_Price__c</columns>
        <columns>Training_Included__c</columns>
        <columns>Bill_Period_Code__c</columns>
        <columns>Recurring_Flag__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Sold__c</field>
            <operation>contains</operation>
            <value>travel</value>
        </filters>
        <filters>
            <field>Integration_Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <filters>
            <field>Ready_to_Bill__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Billing_Item__c.ADD</value>
        </filters>
        <filters>
            <field>Recurring_Flag__c</field>
            <operation>equals</operation>
            <value>BP</value>
        </filters>
        <label>!Travel Expenses Ready to Bill</label>
    </listViews>
    <listViews>
        <fullName>Update_Assets_w_POA</fullName>
        <columns>NAME</columns>
        <columns>Product_Sold__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Related_POA__c</columns>
        <columns>Alternate_Product_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contract__c</field>
            <operation>equals</operation>
            <value>00039183</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Billing_Item__c.Locked</value>
        </filters>
        <label>Update Assets w/POA</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Update_Fulfillment_Quantity_and_Bill</fullName>
        <columns>NAME</columns>
        <columns>Contract__c</columns>
        <columns>Contract_Status__c</columns>
        <columns>Actual_Quantity__c</columns>
        <columns>Qty__c</columns>
        <columns>Sale_Price__c</columns>
        <columns>Total_Price__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Actual_Quantity__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Contract_Status__c</field>
            <operation>equals</operation>
            <value>Pending Mail Print Quantity</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Billing_Item__c.ADD</value>
        </filters>
        <label>!Update Fulfillment Quantity and Bill</label>
    </listViews>
    <listViews>
        <fullName>Vin_Pending_Add</fullName>
        <columns>Contract__c</columns>
        <columns>Ready_to_Bill__c</columns>
        <columns>Bill_Now__c</columns>
        <columns>Change_Type__c</columns>
        <columns>Product_Sold__c</columns>
        <columns>Qty__c</columns>
        <columns>Total_Price__c</columns>
        <columns>Active_Date__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Recurring_Flag__c</columns>
        <columns>Action__c</columns>
        <columns>Bill_Period_Code__c</columns>
        <columns>Start_Date_Exception__c</columns>
        <columns>Primary_Line_Item__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contract__c</field>
            <operation>contains</operation>
            <value>00064717</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Billing_Item__c.ADD</value>
        </filters>
        <label>Vin Pending Add View - Edit Contract #</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Vin_Stop_Billing_View</fullName>
        <columns>Ready_to_Bill__c</columns>
        <columns>Change_Type__c</columns>
        <columns>Dealer__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Product_Sold__c</columns>
        <columns>Sale_Price__c</columns>
        <columns>Cancel_Reason__c</columns>
        <columns>Related_Appeal__c</columns>
        <columns>Alternate_Product_Description__c</columns>
        <columns>NAME</columns>
        <columns>Accounting_Notes__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Billing_Item__c.MODIFY</value>
        </filters>
        <filters>
            <field>Contract__c</field>
            <operation>contains</operation>
            <value>51344</value>
        </filters>
        <label>Vin Stop Billing View - Edit Contract #</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>modify_start_date</fullName>
        <columns>Contract__c</columns>
        <columns>Ready_to_Bill__c</columns>
        <columns>Start_Date_Exception__c</columns>
        <columns>Action__c</columns>
        <columns>Product_Sold__c</columns>
        <columns>Completed_Date__c</columns>
        <columns>Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contract__c</field>
            <operation>contains</operation>
            <value>57855</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Billing_Item__c.MODIFY</value>
        </filters>
        <label>Modify Start Date Link</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>vAuto_Update_Billed_Assets</fullName>
        <columns>NAME</columns>
        <columns>Ready_to_Bill__c</columns>
        <columns>Action__c</columns>
        <columns>LOB_Status__c</columns>
        <columns>Change_Type__c</columns>
        <columns>Product_Sold__c</columns>
        <columns>Sale_Price__c</columns>
        <columns>Qty__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>No_Launch_Date__c</columns>
        <columns>Active_Date__c</columns>
        <columns>Integration_Status__c</columns>
        <columns>Contract__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Billing_Item__c.ADD</value>
        </filters>
        <label>vAuto Update Billed Assets</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>vAuto_update_add</fullName>
        <columns>Ready_to_Bill__c</columns>
        <columns>Dealer__c</columns>
        <columns>Change_Type__c</columns>
        <columns>Action__c</columns>
        <columns>Active_Date__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>No_Launch_Date__c</columns>
        <columns>Product_Sold__c</columns>
        <columns>Sale_Price__c</columns>
        <columns>Cancel_Reason__c</columns>
        <columns>Recurring_Flag__c</columns>
        <columns>Bill_Period_Code__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contract__c</field>
            <operation>equals</operation>
            <value>00078601</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Billing_Item__c.ADD</value>
        </filters>
        <label>vAuto Pending Add View - Edit Contract #</label>
        <language>en_US</language>
        <sharedTo>
            <group>vAuto_All_vAuto</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>LI-{0000000}</displayFormat>
        <label>Asset Link</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billed Assets</pluralLabel>
    <recordTypes>
        <fullName>ADD</fullName>
        <active>true</active>
        <description>Add a new line item to a billing contract</description>
        <label>ADD</label>
    </recordTypes>
    <recordTypes>
        <fullName>Adjustment</fullName>
        <active>true</active>
        <description>use to send adjustments to RMB via Email</description>
        <label>Adjustment</label>
    </recordTypes>
    <recordTypes>
        <fullName>CANCEL</fullName>
        <active>true</active>
        <description>record type is updated by the system when the contract is cancelled</description>
        <label>CANCELLED</label>
    </recordTypes>
    <recordTypes>
        <fullName>Locked</fullName>
        <active>true</active>
        <description>after a one time or setup product is active in RMB update layout to Locked</description>
        <label>Locked</label>
    </recordTypes>
    <recordTypes>
        <fullName>MODIFY</fullName>
        <active>true</active>
        <description>used to modify an exisiting billing items</description>
        <label>MODIFY</label>
    </recordTypes>
    <recordTypes>
        <fullName>Process_Stop</fullName>
        <active>true</active>
        <label>Process Stop</label>
    </recordTypes>
    <recordTypes>
        <fullName>STOP</fullName>
        <active>false</active>
        <label>STOP</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>BI_Start_cannot_be_before_Contract_Start</fullName>
        <active>false</active>
        <description>the billing item start date cannot be before the Contract Start Date</description>
        <errorConditionFormula>IF( Start_Date__c &lt;  Contract__r.StartDate , TRUE, FALSE)</errorConditionFormula>
        <errorDisplayField>Access_to_GA__c</errorDisplayField>
        <errorMessage>The Product Billing Start Date cannot be before the Contract Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Credit_Amount_must_be_negative_number</fullName>
        <active>true</active>
        <description>when creating a line item for a credit, the amount must be a negative number</description>
        <errorConditionFormula>OR( 
Product_Code__c = &quot;PV Appl Dep&quot;, 
Product_Code__c = &quot;CQ APLD DEPOSIT&quot;, 
Product_Code__c = &quot;PV Promo&quot;, 
Product_Code__c = &quot;GL Promo&quot; 
) 
&amp;&amp; 
RecordType.DeveloperName = &quot;ADD&quot; &amp;&amp; 
Total_Price__c &gt;= 0 &amp;&amp; 
$Setup.Master_Switches__c.Validation_Rules__c = TRUE</errorConditionFormula>
        <errorDisplayField>Sale_Price__c</errorDisplayField>
        <errorMessage>Please add the negative sign in front of the amount and then save</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Date_cannot_be_less_than_start_date</fullName>
        <active>true</active>
        <description>the end date cannot be less than the start date- if the start date is deferred user must do a modify first for the start date, then do the stop action</description>
        <errorConditionFormula>End_Date__c &lt; Start_Date__c &amp;&amp;
$Setup.Master_Switches__c.Validation_Rules__c = TRUE</errorConditionFormula>
        <errorDisplayField>Access_to_GA__c</errorDisplayField>
        <errorMessage>You must update process a Modify, set the start date to the same as the requested end date, transmit change, then process a stop billing function.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enforce_Stop_Billing_Process</fullName>
        <active>false</active>
        <description>ensure that users are using the stop billing process</description>
        <errorConditionFormula>RecordType.Name = &quot;MODIFY&quot; &amp;&amp; 
ISCHANGED(End_Date__c )&amp;&amp;
!ISPICKVAL( Change_Type__c , &quot;Module Remove&quot;)&amp;&amp;
 Business_Unit__c != &quot;VinSolutions&quot;</errorConditionFormula>
        <errorMessage>you must use the stop billing button on the billed asset to apply an end date and stop billing in RMB</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Enforce_Stop_Billing_Process_swap</fullName>
        <active>false</active>
        <description>ensure that users are using the stop billing process</description>
        <errorConditionFormula>RecordType.Name = &quot;MODIFY&quot; &amp;&amp; 
ISCHANGED(End_Date__c )&amp;&amp;
!ISPICKVAL( Change_Type__c , &quot;Swap&quot;)&amp;&amp;
 Business_Unit__c != &quot;VinSolutions&quot;</errorConditionFormula>
        <errorMessage>you must use the stop billing button on the billed asset to apply an end date and stop billing in RMB</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LSE_Date_cannot_be_in_the_future</fullName>
        <active>true</active>
        <errorConditionFormula>Last_SE_Date__c &gt; Today()</errorConditionFormula>
        <errorMessage>you cannot set a solid engagement date in the future</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>One_Time_Recurring_Flag_must_be_null</fullName>
        <active>false</active>
        <description>when billing recurring product as a one time charge, meaning there is a start and end date, ensure the recurring flag is null</description>
        <errorConditionFormula>IF( 
   AND( 
      Product_Family__c = &quot;Monthly Reoccuring&quot;,
      TEXT(Action__c) != &quot;STOP&quot;, 
      TEXT(Action__c) !=&quot;Cancelled&quot;,
      End_Date__c &gt;= Today(), 
      End_Date__c &lt;= Today(),
      ISPICKVAL( Recurring_Flag__c , &quot;BP&quot;)
   ),
   True, 
   False 
)</errorConditionFormula>
        <errorMessage>Please clear the Recurring Flag when billing recurring product as a one time.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Price_is_Changed</fullName>
        <active>true</active>
        <description>if the price is changed and the ready to bill box is not checkbox - warn user</description>
        <errorConditionFormula>ISCHANGED(Total_Price__c) &amp;&amp;
Ready_to_Bill__c = False &amp;&amp;
RecordType.DeveloperName != &quot;ADD&quot; &amp;&amp;
$Setup.Master_Switches__c.Validation_Rules__c = TRUE &amp;&amp;
 $User.Alias != &quot;mjoli&quot;</errorConditionFormula>
        <errorMessage>You must submit price changes to RMB. Update the Ready to Bill box on the Billed Asset, and update the Ready to Bill box on the Contract to transmit change to RMB.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Promo_Code_Line_Must_Have_an_End_Date</fullName>
        <active>true</active>
        <description>Cannot save Promo Code Line without an End Date</description>
        <errorConditionFormula>OR( 
Product_Code__c = &quot;PV Promo&quot;, 
Product_Code__c = &quot;GL Promo&quot; 
) 
&amp;&amp; 
RecordType.DeveloperName = &quot;ADD&quot; &amp;&amp; 
  ISBLANK(End_Date__c)
&amp;&amp; 
$Setup.Master_Switches__c.Validation_Rules__c = TRUE</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>Please add the Billing End Date for the Promo Code and then save</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Recurring_Flag_Required</fullName>
        <active>true</active>
        <description>if the product is recurring with no end date, the recurring flag is required</description>
        <errorConditionFormula>Product_Family__c = &quot;Monthly Reoccuring&quot; &amp;&amp;
ISBLANK(End_Date__c) &amp;&amp;
ISPICKVAL(Recurring_Flag__c, &quot;NULL&quot;) &amp;&amp;
$Setup.Master_Switches__c.Validation_Rules__c = TRUE</errorConditionFormula>
        <errorMessage>You must set the Recurring Flag to BP when billing recurring product.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Related_POA_Required_vauto</fullName>
        <active>false</active>
        <description>user must look up the related POA when adding line items</description>
        <errorConditionFormula>Business_Unit__c = &quot;vAuto&quot; &amp;&amp;
ISBLANK(Related_POA__r.Name) &amp;&amp;
Ready_to_Bill__c = TRUE &amp;&amp;
$Setup.Master_Switches__c.Validation_Rules__c = TRUE</errorConditionFormula>
        <errorMessage>You must assign the POA for this Account, so the new Billed Asset will show in the PM&apos;s list.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_date_is_required_for_RMB</fullName>
        <active>true</active>
        <description>the start date is required before sending a line to RMB</description>
        <errorConditionFormula>Ready_to_Bill__c = True &amp;&amp;  ISNULL( Start_Date__c ) &amp;&amp; 
$Setup.Master_Switches__c.Validation_Rules__c = TRUE</errorConditionFormula>
        <errorMessage>you must provide a start date before sending to RMB</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Use_Alt_Description_Required</fullName>
        <active>false</active>
        <description>if the user types in an alternate decription, ensure the &quot;Use Alternate Description&quot; checkbox is set to true</description>
        <errorConditionFormula>ISBLANK(Alternate_Product_Description__c) &amp;&amp;
Use_Alternate_Description__c = TRUE &amp;&amp;
$Setup.Master_Switches__c.Validation_Rules__c = TRUE</errorConditionFormula>
        <errorMessage>You must check the box &quot;Use Alternate Description&quot; before sending to RMB.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>cannot_change_setup_end_date</fullName>
        <active>true</active>
        <description>you cannot change the account setup end date</description>
        <errorConditionFormula>Product_Sold__r.Name = &quot;Account Setup&quot; &amp;&amp;
ISCHANGED(End_Date__c) &amp;&amp;
$Setup.Master_Switches__c.Validation_Rules__c = TRUE</errorConditionFormula>
        <errorMessage>You cannot change the end date on the Account Setup item; the configuration is set to defer this revenue 14 months.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>start_date_change</fullName>
        <active>true</active>
        <description>whenever you change the start date after a contract is activated in RMB you must transmit the change</description>
        <errorConditionFormula>RecordType.DeveloperName = &quot;MODIFY&quot; &amp;&amp;
ISCHANGED(Start_Date__c) &amp;&amp;
$User.LastName != &quot;Jolitz&quot; &amp;&amp;
Ready_to_Bill__c = FALSE &amp;&amp;
$Setup.Master_Switches__c.Validation_Rules__c = TRUE</errorConditionFormula>
        <errorMessage>You must update the Ready to Bill on the Billed Asset and Contract if you are changing the Start Date.</errorMessage>
    </validationRules>
</CustomObject>